; ModuleID = '/home/carl/AnghaBench/reactos/dll/3rdparty/libxslt/extr_extensions.c_xsltExtShutdownTest.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/3rdparty/libxslt/extr_extensions.c_xsltExtShutdownTest.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@testData = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [38 x i8] c"xsltExtShutdownTest: not initialized\0A\00", align 1
@.str.1 = private unnamed_addr constant [33 x i8] c"xsltExtShutdownTest: wrong data\0A\00", align 1
@xsltGenericDebugContext = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [31 x i8] c"Unregistered test module : %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*, i8*)* @xsltExtShutdownTest to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xsltExtShutdownTest(i32 %0, i32* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i8*, i8** @testData, align 8
  %8 = icmp eq i8* %7, null
  br i1 %8, label %9, label %12

9:                                                ; preds = %3
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @xsltTransformError(i32 %10, i32* null, i32* null, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0))
  br label %23

12:                                               ; preds = %3
  %13 = load i8*, i8** %6, align 8
  %14 = load i8*, i8** @testData, align 8
  %15 = icmp ne i8* %13, %14
  br i1 %15, label %16, label %19

16:                                               ; preds = %12
  %17 = load i32, i32* %4, align 4
  %18 = call i32 @xsltTransformError(i32 %17, i32* null, i32* null, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.1, i64 0, i64 0))
  br label %19

19:                                               ; preds = %16, %12
  store i8* null, i8** @testData, align 8
  %20 = load i32, i32* @xsltGenericDebugContext, align 4
  %21 = load i32*, i32** %5, align 8
  %22 = call i32 @xsltGenericDebug(i32 %20, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.2, i64 0, i64 0), i32* %21)
  br label %23

23:                                               ; preds = %19, %9
  ret void
}

declare dso_local i32 @xsltTransformError(i32, i32*, i32*, i8*) #1

declare dso_local i32 @xsltGenericDebug(i32, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
